--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
   <title>Mixtape Club</title>
+  <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
   <%= csrf_meta_tags %>
