Add light/dark mode autoswitcher JS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
   <%= stylesheet_link_tag 'application', 'data-turbo-track': 'reload' %>
   <%= javascript_importmap_tags %>
+
+  <%= render 'layouts/auto_dark_mode' %>
 </head>
 
 <body>
