Nav bar brand (w/ TEMP Bootstrap logo icon

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,9 @@
 <header class="p-3 mb-3 border-bottom">
   <div class='container-fluid'>
     <div class="d-flex flex-wrap align-items-center justify-content-start">
-      <%= link_to :root, class: 'd-flex align-items-center me-1 me-md-3 mb-2 mb-md-0 text-dark text-decoration-none' do %>
-        <%#= bootstrap_icon 'file-earmark-image', height: 32, fill: '#444' %>
+      <%= link_to :root, class: 'navbar-brand d-flex align-items-center me-1 me-md-3 mb-2 mb-md-0' do %>
+        <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-blockXalign-text-top">
+        <%#= bootstrap_icon 'cassette', height: 32, fill: '#444' %>
         Mixtape Club
       <% end %>
 
