Use Bootstrap icons (cassette) for navbar brand

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,9 +1,8 @@
 <header class="p-3 mb-3 border-bottom">
   <div class='container-fluid'>
     <div class="d-flex flex-wrap align-items-center justify-content-start">
-      <%= link_to :root, class: 'navbar-brand d-flex align-items-center me-1 me-md-3 mb-2 mb-md-0' do %>
-        <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-blockXalign-text-top">
-        <%#= bootstrap_icon 'cassette', height: 32, fill: '#444' %>
+      <%= link_to :root, class: 'navbar-brand fw-bold d-flex align-items-center me-1 me-md-3 mb-2 mb-md-0' do %>
+        <%= bootstrap_icon 'cassette', height: 32, class: 'me-1' %>
         Mixtape Club
       <% end %>
 
