--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<div class='card mt-5 bg-light'>
+<div class='card mt-5'>
   <div class='card-body'>
     <% if controller_name != 'sessions' %>
       <p class='m-0'>
