Light styling to unauthed homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,17 @@
-<h1>Mixtape Club</h1>
+<div class='container'>
+  <h1 class='display-1'>Mixtape Club</h1>
 
-<h2>Mixtapes are for</h2>
+  <h2>Mixtapes are for</h2>
 
-<ul>
-  <li>flirting with crushes</li>
-  <li>threatening your nemeses</li>
-  <li>crying over heartbreak</li>
-  <li>learning about yourself</li>
-  <li>driving through the desert</li>
-  <li>capturing this one fleeting moment</li>
-  <li>saying everything you don’t have the words for</li>
-</ul>
+  <ul class='list-unstyled'>
+    <li>flirting with crushes</li>
+    <li>threatening your nemeses</li>
+    <li>flirting with your enemies</li>
+    <li>crying over heartbreak</li>
+    <li>learning about yourself</li>
+    <li>driving through the desert</li>
+    <li>capturing this one fleeting moment</li>
+    <li>saying everything you don’t have the words for</li>
+    <li>…</li>
+  </ul>
+</div>
