--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,9 @@
 <div class='container'>
   <h1 class='display-1'>Mixtape Club</h1>
 
-  <h2>Mixtapes are for</h2>
+  <p class='lead mb-0'>
+    Mixtapes are for…
+  </p>
 
   <ul class='list-unstyled'>
     <li>flirting with crushes</li>
