--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 
     <div class='col-4 col-lg-3'>
       <div>
-        <%#= avatar_image_tag user: Current.user, width: 300, tilt: true %>
+        <%= avatar_image_tag user: Current.user, width: 300, tilt: true %>
       </div>
     </div>
 
