Make avatars deleteable

--- a/app/views/forms/_submit_button.html.erb
+++ b/app/views/forms/_submit_button.html.erb
@@ -1,7 +1,7 @@
 <% label ||= nil %>
 <% note  ||= nil %>
 
-<div class='mb-3 text-end'>
+<div class='mb-3'>
   <%= form.submit (label || 'Save'),
                   class: 'btn btn-primary btn-lg' %>
 
