--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -33,7 +33,13 @@
                   <%= form.file_field :avatar, accept: '.jpg, .jpeg, .png, .gif', class: 'form-control form-control-lg' %>
 
                   <% if Current.user.avatar.attached? %>
-                    <%= button_to_delete_attachment Current.user.avatar, classes: 'mt-2' %>
+                    <%=  link_to 'Delete',
+                                 :avatar,
+                                 class: 'btn btn-outline-danger btn-sm mt-2',
+                                 data:  {
+                                   turbo_method:  :delete,
+                                   turbo_confirm: 'Are you sure you’re sure? There is NO UNDO.'
+                                 } %>
                   <% end %>
                 </div>
               </div>
