--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -6,6 +6,7 @@
         Mixtape Club
       <% end %>
 
+      <% if false %>
       <ul class='nav mb-2 justify-content-center mb-md-0'>
         <% if Current.user.present? %>
           <li><%= link_to 'New', ":new_post", class: 'btn btn-outline-primary btn-sm text-uppercase mt-1 me-2' %></li>
@@ -17,6 +18,7 @@
           </li>
         <% end %>
       </ul>
+      <% end %>
 
       <div class='ms-auto'>
         <% if Current.user.present? %>
