--- a/app/views/mixtapes/new.html.erb
+++ b/app/views/mixtapes/new.html.erb
@@ -1,9 +1,7 @@
-<h1>New mixtape</h1>
+<div class='container my-5'>
+  <div class='col-12 col-md-10 col-lg-8 col-xl-6'>
+    <h1>New mixtape</h1>
 
-<%= render "form", mixtape: @mixtape %>
-
-<br>
-
-<div>
-  <%= link_to "Back to mixtapes", mixtapes_path %>
+    <%= render "form", mixtape: @mixtape %>
+  </div>
 </div>
