--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,19 +1,19 @@
 <%= tag.div class: wrapper_row_classes do %>
   <%= tag.div class: wrapper_columns_classes do %>
 
-  <h2 class="display-4">Resend confirmation instructions</h2>
+  <h2 class='display-4'>Resend confirmation instructions</h2>
 
   <%= form_for resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post } do |form| %>
     <%= render 'forms/errors', resource: resource %>
 
-    <%= render "forms/labeled_email_field", form: form, name: :email %>
+    <%= render 'forms/labeled_email_field', form: form, name: :email %>
 
-    <div class="form-actions">
-      <%= form.submit "Resend confirmation instructions" %>
+    <div class='form-actions'>
+      <%= form.submit 'Resend confirmation instructions' %>
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <%= render 'devise/shared/links' %>
 
   <% end %>
 <% end %>
