--- a/app/views/forms/_errors.html.erb
+++ b/app/views/forms/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if resource.errors.any? %>
-  <div class="alert alert-danger my-3 alert-dismissible fade show" role="alert">
+  <div class='alert alert-danger my-3 alert-dismissible fade show' role='alert'>
     <ul class='m-0 list-unstyled'>
       <% resource.errors.full_messages.uniq.each do |message| %>
         <li><%= message %>.</li>
