--- a/app/views/mixtapes/_form.html.erb
+++ b/app/views/mixtapes/_form.html.erb
@@ -14,8 +14,8 @@
              name: :description,
              note: 'Rendered as Markdown' %>
 
-  <div class="mb-3 d-flex align-items-center">
+  <div class='mb-3 d-flex align-items-center'>
     <%= form.submit class: 'btn btn-primary me-2' %>
-    <%= link_to "Cancel", @mixtape %>
+    <%= link_to 'Cancel', @mixtape %>
   </div>
 <% end %>
