--- a/app/views/mixtapes/edit.html.erb
+++ b/app/views/mixtapes/edit.html.erb
@@ -4,11 +4,11 @@
     <h1 class='mb-0'>Editing mixtape</h1>
     <p class='mb-4 text-secondary'><%= link_to @mixtape.title, @mixtape %></p>
 
-    <%= render "form", mixtape: @mixtape %>
+    <%= render 'form', mixtape: @mixtape %>
 
-    <div class='mt-5 pt-5' id="danger-zone">
+    <div class='mt-5 pt-5' id='danger-zone'>
       <h1 class='text-danger fw-lighter'>Danger Zone™</h1>
-      <%= button_to "Destroy this mixtape", @mixtape, method: :delete, class: 'btn btn-outline-danger' %>
+      <%= button_to 'Destroy this mixtape', @mixtape, method: :delete, class: 'btn btn-outline-danger' %>
     </div>
 
   </div>
