--- a/app/views/mixtapes/new.html.erb
+++ b/app/views/mixtapes/new.html.erb
@@ -2,6 +2,6 @@
   <div class='col-12 col-md-10 col-lg-8 col-xl-6'>
     <h1>New mixtape</h1>
 
-    <%= render "form", mixtape: @mixtape %>
+    <%= render 'form', mixtape: @mixtape %>
   </div>
 </div>
