--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -8,26 +8,24 @@
 
     <%= form.hidden_field :reset_password_token %>
 
-      <div class='row'>
-        <div class='col-12 col-md-6'>
-          <%= render 'forms/labeled_password_field',
-                      form: form,
-                      name: :password %>
-        </div>
-
-        <div class='col-12 col-md-6'>
-          <%= render 'forms/labeled_password_field',
-                     form: form,
-                     name: :password_confirmation,
-                     label: 'Confirm your password' %>
-        </div>
+    <div class='row'>
+      <div class='col-12 col-md-6'>
+        <%= render 'forms/labeled_password_field',
+                    form: form,
+                    name: :password %>
       </div>
 
-      <%= render 'forms/password_note' %>
-
-    <div class='form-actions'>
-      <%= form.submit 'Save password' %>
+      <div class='col-12 col-md-6'>
+        <%= render 'forms/labeled_password_field',
+                   form: form,
+                   name: :password_confirmation,
+                   label: 'Confirm your password' %>
+      </div>
     </div>
+
+    <%= render 'forms/password_note' %>
+
+    <%= render 'forms/submit_button', form: form, label: 'Save password' %>
   <% end %>
 
   <%= render 'devise/shared/links' %>
