--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -6,9 +6,7 @@
   <%= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :post } do |form| %>
     <%= render 'forms/labeled_email_field', form: form, name: :email %>
 
-    <div class='form-actions'>
-      <%= form.submit 'Send reset password instructions' %>
-    </div>
+    <%= render 'forms/submit_button', form: form, label: 'Send reset password instructions' %>
   <% end %>
 
   <%= render 'devise/shared/links' %>
