--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -8,9 +8,7 @@
 
     <%= render 'forms/labeled_email_field', form: form, name: :email %>
 
-    <div class='form-actions'>
-      <%= form.submit 'Resend unlock instructions' %>
-    </div>
+    <%= render 'forms/submit_button', form: form, label: 'Resend unlock instructions' %>
   <% end %>
 
   <%= render 'devise/shared/links' %>
