--- a/app/views/forms/_password_note.html.erb
+++ b/app/views/forms/_password_note.html.erb
@@ -2,5 +2,5 @@
   Passwords must be <b>at least <%= User::PASSWORD_MINIMUM_LENGTH %> characters</b> long.<br class='d-lg-none'>
   For example, <code>mickey fickey firecracker soap on a rope</code>.<br class='d-lg-none'>
   We <b>strongly urge</b> you to use a password manager, like
-  <%= link_to '1Password', 'https://1password.com' %>.
+  <%= link_to '1Password', 'https://1password.com', target: :_blank, rel: 'noopener noreferrer' %>.
 </p>
