--- a/app/views/forms/_submit_button.html.erb
+++ b/app/views/forms/_submit_button.html.erb
@@ -1,9 +1,9 @@
 <% label ||= nil %>
 <% note  ||= nil %>
 
-<div class='mb-3'>
+<div>
   <%= form.submit (label || 'Save'),
-                  class: 'btn btn-primary btn-lg' %>
+                  class: 'mt-3 mb-5 btn btn-primary btn-lg' %>
 
   <% if note.present? %>
     <p class='form-text mb-3'>
