--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,12 +6,17 @@
     <%= form_for resource, as: resource_name, url: registration_path(resource_name) do |form| %>
       <%= render 'forms/errors', resource: resource %>
 
-      <%= render 'forms/labeled_email_field', form: form, name: :email, placeholder: 'user@example.com' %>
+      <%= render 'forms/labeled_email_field',
+                  form: form,
+                  name: :email,
+                  placeholder: 'user@example.com',
+                  autofocus: true %>
 
-      <div class='form-floating mb-3'>
-        <%= form.text_field :username, autofocus: false, placeholder: 'username', autocomplete: 'username', class: 'form-control form-control-lg' %>
-        <%= form.label :username %>
-      </div>
+      <%= render 'forms/labeled_text_field',
+                  form: form,
+                  name: :username,
+                  placeholder: 'username',
+                  autocomplete: 'username' %>
 
       <div class='row'>
         <div class='col-12 col-md-6'>
