--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -20,15 +20,15 @@
             <fieldset class='mb-3'>
               <legend class='fw-light'>Avatar</legend>
 
-              <%= form.label :avatar, class: 'form-label visually-hidden' %>
               <div class='row mb-3'>
                 <% if Current.user.avatar.attached? %>
-                  <div class='col-2'>
+                  <div class='col-3 col-lg-2'>
                     <%= avatar_image_tag user: Current.user, width: 100 %>
                   </div>
                 <% end %>
 
-                <div class='col-<%= Current.user.avatar.attached? ? 10 : 12 %>'>
+                <div class='<%= 'col-9 col-lg-10' if Current.user.avatar.attached? %>'>
+                  <%= form.label :avatar, class: 'form-label visually-hidden' %>
                   <%= form.file_field :avatar, accept: '.jpg, .jpeg, .png, .gif', class: 'form-control form-control-lg' %>
 
                   <% if Current.user.avatar.attached? %>
