--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,27 +1,16 @@
 <header class='p-3 mb-3 border-bottom'>
   <div class='container-fluid'>
     <div class='d-flex flex-wrap align-items-center justify-content-start'>
-      <%= link_to :root, class: 'navbar-brand fw-bold d-flex align-items-center me-1 me-md-3 mb-2 mb-md-0' do %>
+      <%= link_to :root, class: 'navbar-brand fw-bold d-flex align-items-center me-2 me-md-3 mb-2 mb-md-0' do %>
         <%= bootstrap_icon 'cassette', height: 32, class: 'me-1' %>
         Mixtape Club
       <% end %>
 
-      <% if false %>
-      <ul class='nav mb-2 justify-content-center mb-md-0'>
-        <% if Current.user.present? %>
-          <li><%= link_to 'New', ':new_post', class: 'btn btn-outline-primary btn-sm text-uppercase mt-1 me-2' %></li>
-
-          <li>
-            <%# if Current.user.posts.unscoped.draft.present? %>
-              <%= link_to 'Drafts', ':drafts', class: 'btn btn-outline-secondary btn-sm mt-1' %>
-            <%# end %>
-          </li>
-        <% end %>
-      </ul>
-      <% end %>
-
       <div class='ms-auto'>
         <% if Current.user.present? %>
+            <%= link_to 'New', [:new, :mixtape], class: 'btn btn-outline-primary btn-sm text-uppercase mt-1 me-2' %>
+          <%= link_to 'Mixtapes', :mixtapes, class: 'btn btn-outline-primary btn-sm mt-1' %>
+
           <%= link_to :settings, class: 'text-decoration-none ms-2' do %>
             <%= bootstrap_icon 'gear', width: 28, height: 28, fill: :gray %>
           <% end %>
@@ -40,9 +29,3 @@
     </div>
   </div>
 </header>
-
-<% if Current.user.present? %>
-  <div class='container'>
-    <%= link_to 'Mixtapes', :mixtapes, class: 'btn btn-outline-primary' %>
-  </div>
-<% end %>
