--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,17 +22,6 @@
     <%= yield %>
   </main>
 
-  <footer class='py-5 px-3 text-secondary text-center'>
-    <ul class='list-inline'>
-      <li class='list-inline-item'><%= link_to 'Terms',   :terms,   class: 'text-secondary' %></li>
-      <li class='list-inline-item'><%= link_to 'Privacy', :privacy, class: 'text-secondary' %></li>
-
-      <% if Current.user %>
-        <li class='list-inline-item'><%= link_to 'Sign out', :destroy_user_session, class: 'text-secondary' %></li>
-      <% end %>
-    </ul>
-
-    <p>Made with <%= random_heart %> in Southern California</p>
-  </footer>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
