--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class='container my-5'>
   <footer class='py-5 text-secondary row'>
-    <div class='col-8'>
+    <div class='col-12 col-md-8'>
       <p>
         Made with
         <%= bootstrap_icon 'arrow-through-heart-fill', width: 24, height: 24, fill: :gray %>
@@ -8,7 +8,7 @@
       </p>
     </div>
 
-    <div class='col-4 text-end'>
+    <div class='col-12 col-md-4 text-end'>
       <ul class='list-inline'>
         <li class='list-inline-item'><%= link_to 'Terms',   :terms,   class: 'text-secondary' %></li>
         <li class='list-inline-item'><%= link_to 'Privacy', :privacy, class: 'text-secondary' %></li>
