--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       </p>
     </div>
 
-    <div class='col-12 col-md-4 text-end'>
+    <div class='col-12 col-md-4 text-md-end'>
       <ul class='list-inline'>
         <li class='list-inline-item'><%= link_to 'Terms',   :terms,   class: 'text-secondary' %></li>
         <li class='list-inline-item'><%= link_to 'Privacy', :privacy, class: 'text-secondary' %></li>
