--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
 <div class='container mt-5'>
   <div class='row'>
 
+
     <div class='col-4 col-lg-3'>
-      <div>
-        <%= avatar_image_tag user: @user, width: 300, tilt: true %>
-      </div>
+      <%= avatar_image_tag user: @user, width: 300, tilt: true %>
+
+      <%= link_to 'Edit profile', :settings, class: 'btn btn-outline-primary mt-4' %>
     </div>
 
     <div class='col-8 col-lg-9'>
-
       <% if @user.name.present? %>
         <h2 class='fw-light mb-0'><%= @user.name %></h2>
       <% end %>
@@ -29,5 +29,6 @@
         </div>
       <% end %>
     </div>
+
   </div>
 </div>
