Add sun to footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class='col-12 col-md-8'>
       <p>
         Made with
-        <%= bootstrap_icon 'arrow-through-heart-fill', width: 24, height: 24, fill: :gray %>
+        <%= bootstrap_icon %w[arrow-through-heart-fill sun-fill].sample, width: 24, height: 24, fill: :gray %>
         in Southern California
       </p>
     </div>
