--- a/app/views/forms/_labeled_text_field.html.erb
+++ b/app/views/forms/_labeled_text_field.html.erb
@@ -11,7 +11,7 @@
                       placeholder:  (placeholder || name),
                       class:        'form-control form-control-lg' %>
 
-  <%= form.label      name %>
+  <%= form.label      name, placeholder %>
 
   <% if note.present? %>
     <p class='form-text mb-3'>
