--- a/app/views/mixtapes/_form.html.erb
+++ b/app/views/mixtapes/_form.html.erb
@@ -1,18 +1,10 @@
 <%= form_with model: mixtape do |form| %>
   <%= render 'forms/errors', resource: mixtape %>
 
-  <div class='row mb-3'>
+  <div class='mb-3'>
     <% if mixtape.cover.attached? %>
-      <div class='col-3 col-lg-2'>
-        <%= cover_image_tag mixtape: mixtape, width: 100 %>
-      </div>
-    <% end %>
-
-    <div class='<%= 'col-9 col-lg-10' if mixtape.cover.attached? %>'>
-      <%= form.label :cover, class: 'form-label' %>
-      <%= form.file_field :cover, accept: '.jpg, .jpeg, .png, .gif', class: 'form-control form-control-lg' %>
-
-      <% if mixtape.cover.attached? %>
+      <div class='mb-4'>
+        <%= cover_image_tag mixtape: mixtape, width: 600 %>
         <%=  link_to 'Delete',
                      :cover,
                      class: 'btn btn-outline-danger btn-sm mt-2',
@@ -20,12 +12,16 @@
                        turbo_method:  :delete,
                        turbo_confirm: 'Are you sure you’re sure? There is NO UNDO.'
                      } %>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
+
+    <%= form.label :cover, class: 'form-label' %>
+    <%= form.file_field :cover, accept: '.jpg, .jpeg, .png, .gif', class: 'form-control form-control-lg' %>
   </div>
 
 
-  <%= render 'forms/labeled_text_field', form: form, name: :title, note: 'Required' %>
+
+  <%= render 'forms/labeled_text_field', form: form, name: :title, placeholder: 'Title *required' %>
   <%= render 'forms/labeled_text_field', form: form, name: :subtitle %>
   <%= render 'forms/labeled_text_area',  form: form, name: :description, note: 'Rendered as Markdown' %>
 
