--- a/app/views/mixtapes/edit.html.erb
+++ b/app/views/mixtapes/edit.html.erb
@@ -8,7 +8,14 @@
 
     <div class='mt-5 pt-5' id='danger-zone'>
       <h1 class='text-danger fw-lighter'>Danger Zone™</h1>
-      <%= button_to 'Destroy this mixtape', @mixtape, method: :delete, class: 'btn btn-outline-danger' %>
+
+      <%= button_to 'Destroy this mixtape',
+                    @mixtape,
+                    class: 'btn btn-outline-danger',
+                    data:  {
+                      turbo_method:  :delete,
+                      turbo_confirm: 'Are you sure you’re sure? There is NO UNDO.'
+                    } %>
     </div>
 
   </div>
