Make Mixtape#covers deleteable

--- a/app/views/mixtapes/_form.html.erb
+++ b/app/views/mixtapes/_form.html.erb
@@ -6,7 +6,7 @@
       <div class='mb-4'>
         <%= cover_image_tag mixtape: mixtape, width: 600 %>
         <%=  link_to 'Delete',
-                     :cover,
+                     [mixtape, :cover],
                      class: 'btn btn-outline-danger btn-sm mt-2',
                      data:  {
                        turbo_method:  :delete,
