--- a/app/views/mixtapes/show.html.erb
+++ b/app/views/mixtapes/show.html.erb
@@ -2,7 +2,7 @@
   <div id='<%= dom_id @mixtape %>'>
 
     <header class='mb-3'>
-      <h1 class='display-1 fw-bolder m-0'><%= @mixtape.title %></h1>
+      <h1 class='display-1 lh-1 fw-bolder m-0'><%= @mixtape.title %></h1>
 
       <% if @mixtape.subtitle.present? %>
         <h2 class='display-6 fw-light m-0'><%= @mixtape.subtitle %></h2>
