Re-add Dashboard controller

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -28,7 +28,7 @@
     <div class='col-12 col-md-6'>
       <h1>New mixtape</h1>
 
-      <%= render 'form', mixtape: @mixtape %>
+      <%= render 'mixtapes/form', mixtape: @mixtape %>
     </div>
 
   </div>
