--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,31 +2,31 @@
   <div class='row'>
 
     <div class='col-12 col-md-6'>
-      <h1>Dashboard</h1>
+      <h1 class='display-3'>Dashboard</h1>
 
       <div class='mb-5'>
-        <h2 class='h3 fw-light'>Draft mixtapes</h2>
+        <h3 class='fw-light'>Draft mixtapes</h3>
         <%= render 'mixtapes', mixtapes: @draft_mixtapes, label: 'Draft' %>
       </div>
 
       <div class='mb-5'>
-        <h2 class='h3 fw-light'>Secret mixtapes</h2>
+        <h3 class='fw-light'>Secret mixtapes</h3>
         <%= render 'mixtapes', mixtapes: @secret_mixtapes, label: 'Secret' %>
       </div>
 
       <div class='mb-5'>
-        <h2 class='h3 fw-light'>Published mixtapes</h2>
+        <h3 class='fw-light'>Published mixtapes</h3>
         <%= render 'mixtapes', mixtapes: @published_mixtapes, label: 'Published' %>
       </div>
 
       <div class='mb-5'>
-        <h2 class='h3 fw-light'>Archived mixtapes</h2>
+        <h3 class='fw-light'>Archived mixtapes</h3>
         <%= render 'mixtapes', mixtapes: @archived_mixtapes, label: 'Archived' %>
       </div>
     </div>
 
     <div class='col-12 col-md-6'>
-      <h1>New mixtape</h1>
+      <h2 class='display-3'>New mixtape</h2>
 
       <%= render 'mixtapes/form', mixtape: @mixtape %>
     </div>
