--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,10 @@
 <div class='container'>
   <%= render 'forms/errors', resource: resource %>
 
-  <div class='row px-3'>
+  <div class='row'>
     <div class='col-12 mx-auto'>
 
-      <h1 class='display-4'>
+      <h1 class='display-3'>
         Settings<span class='text-secondary'>:</span> <b>Account</b>
       </h1>
 
