--- a/app/views/mixtapes/index.html.erb
+++ b/app/views/mixtapes/index.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <h1 class='display-3'>Mixtapes</h1>
+  <h1 class='display-3'>Explore</h1>
 
   <div id='mixtapes'>
     <% @mixtapes.each do |mixtape| %>
