--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,34 +1,36 @@
-<%= tag.div class: wrapper_row_classes do %>
-  <%= tag.div class: wrapper_columns_classes do %>
+<div class='container'>
+  <div class='row'>
+    <h1 class='display-3'>Change your password</h1>
 
-  <h2 class='display-4'>Change your password</h2>
+    <div class='col-12 col-md-10 col-lg-8 col-xl-6'>
+      <%= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put } do |form| %>
+        <%= render 'forms/errors', resource: resource %>
 
-  <%= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put } do |form| %>
-    <%= render 'forms/errors', resource: resource %>
+        <%= form.hidden_field :reset_password_token %>
 
-    <%= form.hidden_field :reset_password_token %>
+        <div class='row'>
+          <div class='col-12 col-md-6'>
+            <%= render 'forms/labeled_password_field',
+                        form:      form,
+                        name:      :password,
+                        autofocus: true %>
+          </div>
 
-    <div class='row'>
-      <div class='col-12 col-md-6'>
-        <%= render 'forms/labeled_password_field',
-                    form: form,
-                    name: :password %>
-      </div>
+          <div class='col-12 col-md-6'>
+            <%= render 'forms/labeled_password_field',
+                       form: form,
+                       name: :password_confirmation,
+                       label: 'Confirm your password' %>
+          </div>
+        </div>
 
-      <div class='col-12 col-md-6'>
-        <%= render 'forms/labeled_password_field',
-                   form: form,
-                   name: :password_confirmation,
-                   label: 'Confirm your password' %>
-      </div>
+        <%= render 'forms/password_note' %>
+
+        <%= render 'forms/submit_button', form: form, label: 'Save password' %>
+      <% end %>
+
+      <%= render 'devise/shared/links' %>
     </div>
 
-    <%= render 'forms/password_note' %>
-
-    <%= render 'forms/submit_button', form: form, label: 'Save password' %>
-  <% end %>
-
-  <%= render 'devise/shared/links' %>
-
-  <% end %>
-<% end %>
+  </div>
+</div>
