--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,16 @@
-<%= tag.div class: wrapper_row_classes do %>
-  <%= tag.div class: wrapper_columns_classes do %>
+<div class='container'>
+  <div class='row'>
+    <h1 class='display-3'>Forgot your password?</h1>
 
-  <h2 class='display-4'>Forgot your password?</h2>
+    <div class='col-12 col-md-10 col-lg-8 col-xl-6'>
+      <%= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :post } do |form| %>
+        <%= render 'forms/labeled_email_field', form: form, name: :email, autofocus: true %>
 
-  <%= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :post } do |form| %>
-    <%= render 'forms/labeled_email_field', form: form, name: :email %>
+        <%= render 'forms/submit_button', form: form, label: 'Send reset password instructions' %>
+      <% end %>
 
-    <%= render 'forms/submit_button', form: form, label: 'Send reset password instructions' %>
-  <% end %>
+      <%= render 'devise/shared/links' %>
+    </div>
 
-  <%= render 'devise/shared/links' %>
-
-  <% end %>
-<% end %>
+  </div>
+</div>
