--- a/app/views/settings/_subnav.html.erb
+++ b/app/views/settings/_subnav.html.erb
@@ -1,3 +1,5 @@
+<p class='fs-4 mb-2 fw-light'>Settings</p>
+
 <div class='list-group'>
   <%= link_to_settings page: :profile %>
   <%= link_to_settings page: :account %>
