--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -4,9 +4,7 @@
   <div class='row'>
     <div class='col-12 mx-auto'>
 
-      <h1 class='display-3'>
-        Settings<span class='text-secondary'>:</span> <b>Profile</b>
-      </h1>
+      <h1 class='display-3'>Profile</h1>
 
       <div class='row mt-5'>
         <div class='col-12 col-md-3 mb-5'>
