--- a/app/views/mixtapes/edit.html.erb
+++ b/app/views/mixtapes/edit.html.erb
@@ -2,7 +2,7 @@
   <div class='col-12 col-md-10 col-lg-8 col-xl-6'>
 
     <h1 class='mb-0'>Editing mixtape</h1>
-    <p class='mb-4 text-secondary'><%= link_to @mixtape.title, @mixtape %></p>
+    <p class='mb-4 text-secondary'><%= link_to @mixtape.title, @mixtape.path %></p>
 
     <%= render 'form', mixtape: @mixtape %>
 
