Capitalize Username in /signup form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
         <%= render 'forms/labeled_text_field',
                     form: form,
                     name: :username,
-                    placeholder: 'username',
+                    placeholder: 'Username',
                     autocomplete: 'username' %>
 
         <div class='row'>
